--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://bootswatch.com/4/quartz/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css">
     <title>Redux Demo</title>
 </head>
 
 <body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
-    <script src="redux.js"></script>
-    <script src="moodChanger.js"></script>
+    <div class="text-center">
+        <h1 class=" display-1" id="face"> ఠ_ఠ</h1>
+        <button class="btn btn-default" id="angry"> ANGRY </button>
+        <button class="btn btn-default" id="happy"> HAPPY </button>
+        <button class="btn btn-default" id="annoyed">ANNOYED</button>
+        <button class="btn btn-default" id="inlove">IN LOVE</button>
+        <button class="btn btn-default" id="overjoyed">OVERJOYED</button>
+        <script class="btn btn-default" src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
+        <script class="btn btn-default" src="redux.js"></script>
+        <script class="btn btn-default" src="moodChanger.js"></script>
+    </div>
 </body>
 
 </html>
