minor css change

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 
 <body>
 
-    <div class="text-center">
-        <h1 class=" display-1" id="face"> ఠ_ఠ</h1>
-        <button class="btn btn-default" id="angry"> ANGRY </button>
-        <button class="btn btn-default" id="happy"> HAPPY </button>
-        <button class="btn btn-default" id="annoyed">ANNOYED</button>
-        <button class="btn btn-default" id="inlove">IN LOVE</button>
-        <button class="btn btn-default" id="overjoyed">OVERJOYED</button>
-        <script class="btn btn-default" src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
-        <script class="btn btn-default" src="redux.js"></script>
-        <script class="btn btn-default" src="moodChanger.js"></script>
+    <div>
+        <h1 class="text-center display-1 pt-2" id="face">ఠ_ఠ</h1>
+        <div class="text-center">
+            <button class="btn btn-default m-3" id="angry"> ANGRY </button>
+            <button class="btn btn-default m-3" id="happy"> HAPPY </button>
+            <button class="btn btn-default m-3" id="annoyed">ANNOYED</button>
+            <button class="btn btn-default m-3" id="inlove">IN LOVE</button>
+            <button class="btn btn-default m-3" id="overjoyed">OVERJOYED</button>
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
+    <script m-3" src="redux.js"></script>
+    <script src="moodChanger.js"></script>
+
 </body>
 
 </html>
